--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,29 @@
-.container {
-    max-width: 960px;
-    padding: 0;
+.navbar {
+    padding: 1rem;
+}
+
+.card {
+    padding: 1rem;
+}
+
+.col {
+    padding: none;
+    margin: 2rem;
+}
+
+.row-bg {
+    padding: 40px 0px;
+    background-image: url("../images/ep_naturalwhite.png")
+}
+
+h5 {
+    color: #4aaaa5;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav-item {
+    font-family: Arial, Helvetica, sans-serif;
 }
