--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+
+
 .navbar {
     padding: 1rem;
 }
@@ -8,7 +10,6 @@
 
 .col {
     padding: none;
-    margin: 2rem;
 }
 
 .row-bg {
@@ -26,4 +27,12 @@ p {
 
 .nav-item {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.formstyle {
+    padding: 2em;
+}
+
+.form-group {
+    margin: 0;
 }
